--- a/index.html
+++ b/index.html
@@ -183,10 +183,27 @@
                         <p>Version: <span id="gameVersion"></span></p>
                         <p>Build: <span id="gameBuild"></span></p>
                         <p>Discord: <a href="https://discord.gg/jnK3ppW">https://discord.gg/jnK3ppW</a></p>
+                        <p>GitHub: <a href="https://github.com/blue1177/SkillClicker">https://github.com/blue1177/SkillClicker</a></p>
                         <p>Full Changelog: <a target="_blank" href="version.txt">here</a></p>
                         <hr>
                         <h5>Updates</h5>
                         <ul>
+                            <li>0.0.5 (15) - 2/20/18</li>
+                            <ul>
+                                <li>Cleaned up left game window into tab format</li>
+                                <li>Added resource and inventory tabs</li>
+                                <li>Cleaned up right game window into tab format</li>
+                                <li>Added research and shop tabs</li>
+                                <li>Enabled resource logging</li>
+                                <li>Added resources to interface</li>
+                                <li>Optimized data handling functions</li>
+                                <li>Made some code lines easier to read</li>
+                                <li>Created categories and ability to hide resources from view based on category</li>
+                                <li>Material and skill icons will now highlight when gained/used (yellow/red)</li>
+                                <li>Full changelog text file now available in info tab</li>
+                                <li>You can now change your character's name in the options tab</li>
+                                <li>Added GitHub link</li>
+                            </ul>
                             <li>0.0.4 (11) - 2/8/18</li>
                             <ul>
                                 <li>Added fallback system to prevent new cookies added to old game saves becoming corrupted</li>
