build 16 - fixed name changing issues and minor optimizations in game initialization

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="images/icons/logo.png">
     <link rel="stylesheet" href="assets/jquery-ui.min.css">
     <link rel="stylesheet" href="assets/bootstrap.min.css">
-    <link rel="stylesheet" href="interface.css?v=15">
+    <link rel="stylesheet" href="interface.css?v=16">
 </head>
 
 <body>
@@ -172,18 +172,18 @@
                     <div class="tab-pane fade" id="gameOptions">
                         <h5>Options</h5>
                         <input type="button" class="btn btn-info" id="save" value="Save" onclick="saveGame()">
-                        <input type="button" class="btn btn-success" id="load" value="Load" onclick="loadGame()">
+                        <!--<input type="button" class="btn btn-success" id="load" value="Load" onclick="loadGame()">-->
                         <input type="button" class="btn btn-danger" id="reset" value="Reset" onclick="resetGame()">
                         <hr>
-                        <input type="button" class="btn btn-dark" id="renameChar" value="Rename Character" onclick="renameChar()">
+                        <input type="button" class="btn btn-success" id="renameChar" value="Rename Character" onclick="renameChar()">
                     </div>
                     <div class="tab-pane fade" id="gameInfo">
                         <h5>General Info</h5>
                         <p>Skill Clicker by blue</p>
                         <p>Version: <span id="gameVersion"></span></p>
                         <p>Build: <span id="gameBuild"></span></p>
-                        <p>Discord: <a href="https://discord.gg/jnK3ppW">https://discord.gg/jnK3ppW</a></p>
-                        <p>GitHub: <a href="https://github.com/blue1177/SkillClicker">https://github.com/blue1177/SkillClicker</a></p>
+                        <p>Discord: <a href="https://discord.gg/jnK3ppW" target="_blank">https://discord.gg/jnK3ppW</a></p>
+                        <p>GitHub: <a href="https://github.com/blue1177/SkillClicker" target="_blank">https://github.com/blue1177/SkillClicker</a></p>
                         <p>Full Changelog: <a target="_blank" href="version.txt">here</a></p>
                         <hr>
                         <h5>Updates</h5>
@@ -295,7 +295,7 @@
     <script src="assets/popper-1.11.0.min.js"></script>
     <script src="assets/jquery-ui.min.js"></script>
     <script src="assets/bootstrap.bundle.min.js"></script>
-    <script src="game.js?v=15"></script>
+    <script src="game.js?v=16"></script>
 </body>
 
 </html>
